# lib_template

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
cmake/: MyLibraryConfig.cmake  macros.cmake
include/MyLibrary/: MyAlgorithm.h  MyLibrary.h
src/MyAlgorithm/: MyAlgorithm.cpp  MyAlgorithm.h
src/MyLibrary/: MyAlgorithm.cpp
src/MyLibrary/MyAlgorithm/: MyAlgorithm.cpp  MyAlgorithm.h
test/: CMakeLists.txt  test_myalgorithm.cpp  test_myalgorithmb.cpp
tools/: Macros.cmake  MyLibraryConfig.cmake.in
